# gemini-deep-research

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  progress.txt  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: CODE_REVIEW.md  CODE_REVIEW_v0.1.3.md  MCP.md  TROUBLESHOOTING.md  USAGE.md
examples/: 01_basic.sh  02_planning.sh  03_mcp.sh  04_multimodal.sh  05_follow_up.sh
src/gdr/: __init__.py  __main__.py  cli.py  config.py  constants.py  errors.py
src/gdr/commands/: __init__.py  _common.py  cancel.py  config.py  doctor.py  follow_up.py  ls.py  plan.py  research.py  resume.py  show.py  status.py
src/gdr/core/: __init__.py  client.py  inputs.py  models.py  normalize.py  persistence.py  planning.py  rendering.py  requests.py  security.py  streaming.py
src/gdr/ui/: __init__.py  live.py  progress.py
tests/: conftest.py  test_live_smoke.py
tests/fixtures/streams/: current_schema_disconnect_mid_text.jsonl  current_schema_happy_path.jsonl  current_schema_mid_stream_error.jsonl  current_schema_out_of_order.jsonl  disconnect_mid_text.jsonl  happy_path.jsonl  mid_stream_error.jsonl  out_of_order.jsonl  thought_image_text.jsonl
tests/unit/: test_cancel_command.py  test_cli.py  test_client.py  test_commands_common.py  test_config.py  test_config_command.py  test_doctor_command.py  test_follow_up_command.py  test_inputs.py  test_live.py  test_ls_command.py  test_models.py  test_normalize.py  test_persistence.py  test_plan_command.py  test_planning.py  test_progress.py  test_rendering.py  test_requests.py  test_research_command.py  test_research_regressions.py  test_resume_command.py  test_sdk_contract.py  test_security.py  test_show_command.py  test_status_command.py  test_streaming.py
