[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gemini-deep-research"
version = "0.1.0"
description = "Terminal-first client for Google's Gemini Deep Research and Deep Research Max agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "gdr contributors" }]
keywords = ["gemini", "deep-research", "cli", "llm", "google", "ai", "research", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "google-genai>=1.55.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "platformdirs>=4.2.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
gdr = "gdr.cli:app"

[project.urls]
Homepage = "https://github.com/gdr-cli/gemini-deep-research"
Repository = "https://github.com/gdr-cli/gemini-deep-research"
Issues = "https://github.com/gdr-cli/gemini-deep-research/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/gdr"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gdr",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "C4",  # flake8-comprehensions
    "PL",  # pylint
    "TID", # flake8-tidy-imports
]
ignore = [
    "E501",    # line length handled by formatter
    "PLR0913", # too many arguments — CLI commands legitimately have many
    "PLR2004", # magic value comparisons — readable in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR", "B011"]
"src/gdr/cli.py" = ["PLC0415"]

[tool.ruff.lint.flake8-bugbear]
# Typer's idiom requires `typer.Option(...)` / `typer.Argument(...)` in
# default values of command functions. These calls are side-effect-free
# metadata constructors, so the bugbear B008 warning is spurious here.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy (strict typing)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
show_error_codes = true
mypy_path = "src"
packages = ["gdr"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["google.*", "google.genai.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# `tomli` is only imported on Python 3.10; we run mypy on 3.11+.
module = "tomli"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live: tests that hit the real Gemini API (requires GEMINI_API_KEY and RUN_LIVE_TESTS=1)",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/gdr"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
